Sync with JVM when opening modules & removed add opens + redo tests